crates/plotnik-tests/tests/macro_ui/fail/query_file_not_found.rs
plotnik::query! {
    grammar = "arborium-javascript",
    file = "no_such_query.ptk",
}

fn main() {}
