crates/plotnik-tests/tests/macro_ui/fail/query_file_not_found.stderr
error: failed to read `no_such_query.ptk`: No such file or directory (os error 2)
 --> tests/macro_ui/fail/query_file_not_found.rs:3:12
  |
3 |     file = "no_such_query.ptk",
  |            ^^^^^^^^^^^^^^^^^^^
